Add basic html structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
   <title>Silicon</title>
 </head>
 <body>
+
+  <header>
+  </header>
+
+  <main>
+    
+    <section id="showcase">
+    </section>
+
+    <section id="features">
+    </section>
+
+    <section id="how">
+    </section>
+
+    <section id="features2">
+    </section>
+
+    <section id="reviews">
+    </section>
+
+    <section id="faq-cta">
+    </section>
+
+  </main>
   
 </body>
 </html>
