--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
 <body>
 
   <header>
+    <div class="wrapper header">
+
+      <div class="header-left flex">
+        <a class="logo" href="index.html">
+          <img class="logo-img" src="/assets/logo-bglight.svg" alt="Silicon Logo">
+        </a>
+
+        <nav id="main-menu" class="navbar">
+          <a class="nav-link" href="#">Features</a>
+        </nav>
+      </div>
+
+      <div class="header-right flex">
+        <span class="test">test</span>
+      </div>
+
+    </div>
   </header>
 
   <main>
