--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <span class="dm-chbox-hidden">prefers-color-scheme-dark-box</span>
   <input id="darkmode-switch-darkbg" class="darkmode-checkboxes dm-chbox-hidden" type="checkbox" checked>
   <!-- Put everything inside a container on the same DOM-level as the checkboxes in order for theme swapping to work-->
-  <div class="themeswap">
+  <div class="themewrapper">
     
     <header>
       <div class="header-container wrapper">
@@ -58,38 +58,28 @@
     </header>
 
     <main>
-      <section id="showcase">
-        <div class="showcase-container wrapper">
-          <h1 class="showcase-h1">Manage All Your<br>Money in One App</h1>
+      <section id="hero">
+        <div class="hero-container wrapper">
+          <h1 class="headline">Manage All Your<br>Money in One App</h1>
 
-          <p class="showcase-pitch">
-            We offer you a new generation of the mobile banking. <br class="paragraph-splitter"> Save, spend & manage money in your pocket.
-          </p>
+          <div class="content">
+            <p class="pitch">
+              We offer you a new generation of the mobile banking. <br class="paragraph-splitter"> Save, spend & manage money in your pocket.
+            </p>
 
-          <div class="store-buttons flex">
-            <div class="btn-store-container">
-              <a href="#">
-                <button class="btn-apple btn-store">
-                  <img class="btn-apple-img btn-store-img" src="/assets/appstorebadges/appstore-light.svg" alt="Appstore">
-                </button>
-              </a>
+            <div class="dlbuttons">
+              <a class="btn-dl btn-appstore" href="#"><img class="btn-apple-img" src="/assets/appstorebadges/appstore-light.svg" alt="Appstore"></a>
+              <a class="btn-dl btn-googleplay" href="#"><img class="btn-google-img" src="/assets/appstorebadges/googleplay-light.svg" alt="Google Play"></a>
             </div>
-          
-            <div class="btn-store-container">
-              <a href="#">
-                <button class="btn-google btn-store">
-                  <img class="btn-google-img btn-store-img" src="/assets/appstorebadges/googleplay-light.svg" alt="Google Play">
-                </button>
-              </a>
-            </div>
+  
+            <a class="discover-more" href="#">
+              <img class="chevron-dn-img" src="/assets/icons/chevron-dn-white.svg" alt="">
+              <span>Discover more</span>
+            </a>
           </div>
 
-          <div class="discover-more flex">
-            <span class="discover-more-text">Discover more</span>
-          </div>
-
-          <div class="showcase-image-container">
-            <img class="showcase-img" src="/assets/images/showcase.png" alt="">
+          <div class="hero-img-container">
+            <img class="hero-img" src="/assets/images/showcase.png" alt="">
           </div>
 
         </div>
