Finished tablet design for hero section

--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
             </a>
           </div>
 
-          <div class="hero-img-container">
-            <img class="hero-img" src="/assets/images/showcase.png" alt="">
+          <div class="hero-images">
+            <img class="hero-img-shadow" src="/assets/images/tablet/hero-shadow.png" alt="">
+            <img class="hero-img-back" src="/assets/images/tablet/hero-back.png" alt="">
+            <img class="hero-img-front" src="/assets/images/tablet/hero-front.png" alt="">
           </div>
 
         </div>
