Finish hero section for all device types

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <div class="header-right flex">
           <!-- Labels for toggling darkmode.
           The label that doesn't correspond to users preffered scheme will be hidden.  -->
-          <div class="theme-toggle-switches">
+          <div class="theme-toggle-switches flex">
+            <span class="dm-text">Dark mode</span>
             <label id="label-darkmode-switch-whitebg" for="darkmode-switch-whitebg" class="toggle-switch">
               <span class="dmswitchbg"></span>
             </label>
