Finish features-page for mobile

--- a/index.html
+++ b/index.html
@@ -89,6 +89,74 @@
       </section>
 
       <section id="features">
+        <div class="features-container wrapper">
+
+          <div class="left-img">
+
+          </div>
+          <div class="right-content">
+            <h2 class="headline">App Features</h2>
+            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
+            
+            <div class="feature-cards">
+              <div class="easy card">
+                <div class="card-img-container">
+                  <img src="/assets/icons/appfeatureicons/easypayments.svg" alt="">
+                </div>
+                <div class="cardtext">
+                  <h3>Easy Payments</h3>
+                  <p>Id mollis consectetur congue egestas egestas suspendisse blandit justo.</p>
+                </div>
+              </div>
+              <div class="data card">
+                <div class="card-img-container">
+                  <img src="/assets/icons/appfeatureicons/datasecurity.svg" alt="">
+                </div>
+                <div class="cardtext">
+                  <h3>Data Security</h3>
+                  <p>Augue pulvinar justo, fermentum fames aliquam accumsan vestibulum non.</p>
+                </div>
+              </div>
+              <div class="cost card">
+                <div class="card-img-container">
+                  <img src="/assets/icons/appfeatureicons/coststatistics.svg" alt="">
+                </div>
+                <div class="cardtext">
+                  <h3>Cost Statistics</h3>
+                  <p>Mattis urna ultricies non amet, purus in auctor non. Odio vulputate ac nibh.</p>
+                </div>
+              </div>
+              <div class="support card">
+                <div class="card-img-container">
+                  <img src="/assets/icons/appfeatureicons/support247.svg" alt="">
+                </div>
+                <div class="cardtext">
+                  <h3>Support 24/7</h3>
+                  <p>A elementum, imperdiet enim, pretium etiam facilisi in aenean quam mauris.</p>
+                </div>
+              </div>
+              <div class="regular card">
+                <div class="card-img-container">
+                  <img src="/assets/icons/appfeatureicons/regularcashback.svg" alt="">
+                </div>
+                <div class="cardtext">
+                  <h3>Regular Cashback</h3>
+                  <p>Sit facilisis dolor arcu, fermentum vestibulum arcu elementum imperdiet eleifend.</p>
+                </div>
+              </div>
+              <div class="top card">
+                <div class="card-img-container">
+                  <img src="/assets/icons/appfeatureicons/topstandards.svg" alt="">
+                </div>
+                <div class="cardtext">
+                  <h3>Top Standards</h3>
+                  <p>Faucibus cursus maecenas lorem cursus nibh. Sociis sit risus id. Sit facilisis dolor arcu.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
       </section>
 
       <section id="how">
