--- a/index.html
+++ b/index.html
@@ -191,6 +191,55 @@
       </section>
 
       <section id="how">
+        <div class="how-container wrapper">
+          <h2>How Does It Work?</h2>
+
+          <div class="images-container">
+            <div class="img tablet left">
+              <img src="assets/images/tablet/howdoesitwork-left.png" alt="Showcase of card transactions.">
+            </div>
+            
+            <div class="img desktop left">
+              <img src="assets/images/desktop/howdoesitwork-left.png" alt="Showcase of budget and spendings graph.">
+            </div>
+
+            <div class="img mobile center">
+              <img src="assets/images/mobile/howdoesitwork.png" alt="Showcase of money transfers.">
+            </div>
+
+            <div class="img tablet center">
+              <img src="assets/images/tablet/howdoesitwork-center.png" alt="Showcase of money transfers.">
+            </div>
+
+            <div class="img desktop center">
+              <img src="assets/images/desktop/howdoesitwork-center.png" alt="Showcase of card transactions.">
+            </div>
+
+            <div class="img tablet right">
+              <img src="assets/images/tablet/howdoesitwork-right.png" alt="Showcase of money transfer interface.">
+            </div>
+
+            <div class="img desktop right">
+              <img src="assets/images/desktop/howdoesitwork-right.png" alt="Showcase of money transfers.">
+            </div>
+          </div>
+
+          <div class="image-description mobile">
+            <h3>Transfers to people from your contact list</h3>
+            <p>Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
+          </div>
+
+          <div class="image-description tablet">
+            <h3>Step 3. Transfers to people from your contact list</h3>
+            <p>Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
+          </div>
+
+          <div class="image-description desktop">
+            <h3>Latest transaction history</h3>
+            <p>Enim, et amet praesent pharetra. Mi non ante hendrerit amet sed. Arcu sociis tristique quisque hac in consectetur condimentum.</p>
+          </div>
+
+        </div>
       </section>
 
       <section id="payment">
