Added missing image alt texts

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             </p>
 
             <div class="dlbuttons">
-              <a class="btn-dl btn-appstore" href="#"><img class="btn-apple-img" src="/assets/appstorebadges/appstore-light.svg" alt="Appstore"></a>
-              <a class="btn-dl btn-googleplay" href="#"><img class="btn-google-img" src="/assets/appstorebadges/googleplay-light.svg" alt="Google Play"></a>
+              <a class="btn-dl btn-appstore" href="#"><img class="btn-apple-img" src="/assets/appstorebadges/appstore-light.svg" alt="Apple Appstore button"></a>
+              <a class="btn-dl btn-googleplay" href="#"><img class="btn-google-img" src="/assets/appstorebadges/googleplay-light.svg" alt="Google Play button"></a>
             </div>
   
             <a class="discover-more" href="#">
@@ -81,8 +81,8 @@
 
           <div class="hero-images">
             <img class="hero-img-shadow" src="/assets/images/tablet/hero-shadow.png" alt="">
-            <img class="hero-img-back" src="/assets/images/tablet/hero-back.png" alt="">
-            <img class="hero-img-front" src="/assets/images/tablet/hero-front.png" alt="">
+            <img class="hero-img-back" src="/assets/images/tablet/hero-back.png" alt="Account balance graph.">
+            <img class="hero-img-front" src="/assets/images/tablet/hero-front.png" alt="Transaction history.">
           </div>
 
         </div>
@@ -93,27 +93,27 @@
           
           <div class="brandlogo-container">
             <div class="brandlogo">
-              <img class="brandlogo-img" src="/assets/images/brand-logos/logoipsum-1.svg" alt="">
+              <img class="brandlogo-img" src="/assets/images/brand-logos/logoipsum-1.svg" alt="Partner logoipsum-1 logo">
             </div>
 
             <div class="brandlogo">
-              <img class="brandlogo-img" src="/assets/images/brand-logos/logoipsum-2.svg" alt="">
+              <img class="brandlogo-img" src="/assets/images/brand-logos/logoipsum-2.svg" alt="Partner logoipsum-2 logo">
             </div>
 
             <div class="brandlogo">
-              <img class="brandlogo-img" src="/assets/images/brand-logos/logoipsum-3.svg" alt="">
+              <img class="brandlogo-img" src="/assets/images/brand-logos/logoipsum-3.svg" alt="Partner logoipsum-3 logo">
             </div>
 
             <div class="brandlogo">
-              <img class="brandlogo-img" src="/assets/images/brand-logos/logoipsum-4.svg" alt="">
+              <img class="brandlogo-img" src="/assets/images/brand-logos/logoipsum-4.svg" alt="Partner logoipsum-4 logo">
             </div>
 
             <div class="brandlogo desktop-only">
-              <img class="brandlogo-img" src="/assets/images/brand-logos/logoipsum-5.svg" alt="">
+              <img class="brandlogo-img" src="/assets/images/brand-logos/logoipsum-5.svg" alt="Partner logoipsum-5 logo">
             </div>
 
             <div class="brandlogo desktop-only">
-              <img class="brandlogo-img" src="/assets/images/brand-logos/logoipsum-6.svg" alt="">
+              <img class="brandlogo-img" src="/assets/images/brand-logos/logoipsum-6.svg" alt="Partner logoipsum-6 logo">
             </div>
 
           </div>
@@ -121,7 +121,7 @@
 
           <div class="content-container">
             <div class="left-content">
-              <img class="phone-img" src="/assets/images/desktop/features-phone.png" alt="">
+              <img class="phone-img" src="/assets/images/desktop/features-phone.png" alt="Card transactions.">
               <img class="card-img" src="/assets/images/desktop/features-card.png" alt="">
             </div>
   
@@ -198,27 +198,21 @@
             <div class="img tablet left">
               <img src="/assets/images/tablet/howdoesitwork-left.png" alt="Showcase of card transactions.">
             </div>
-            
             <div class="img desktop left">
               <img src="/assets/images/desktop/howdoesitwork-left.png" alt="Showcase of budget and spendings graph.">
             </div>
-
             <div class="img mobile center">
               <img src="/assets/images/mobile/howdoesitwork.png" alt="Showcase of money transfers.">
             </div>
-
             <div class="img tablet center">
               <img src="/assets/images/tablet/howdoesitwork-center.png" alt="Showcase of money transfers.">
             </div>
-
             <div class="img desktop center">
               <img src="/assets/images/desktop/howdoesitwork-center.png" alt="Showcase of card transactions.">
             </div>
-
             <div class="img tablet right">
               <img src="/assets/images/tablet/howdoesitwork-right.png" alt="Showcase of money transfer interface.">
             </div>
-
             <div class="img desktop right">
               <img src="/assets/images/desktop/howdoesitwork-right.png" alt="Showcase of money transfers.">
             </div>
@@ -238,7 +232,6 @@
             <h3>Latest transaction history</h3>
             <p>Enim, et amet praesent pharetra. Mi non ante hendrerit amet sed. Arcu sociis tristique quisque hac in consectetur condimentum.</p>
           </div>
-
         </div>
       </section>
 
