Updated section structure. Added footer.

--- a/index.html
+++ b/index.html
@@ -236,14 +236,23 @@
       </section>
 
       <section id="payment">
+        <!-- Not in mobile -->
       </section>
 
       <section id="reviews">
+      <!-- Not in mobile -->
       </section>
 
-      <section id="faq-cta">
+      <section id="faq-contact">
+      </section>
+
+      <section id="subscribe">
       </section>
     </main>
-  </div>
+
+    <footer>
+    </footer>
+
+  </div> <!-- Themewrapper div -->
 </body>
 </html>
