Added basic structure for remaining sections to CSS

--- a/index.html
+++ b/index.html
@@ -244,6 +244,15 @@
       </section>
 
       <section id="faq-contact">
+        <div class="faq-contact-container wrapper">
+          <h2>Any questions? Check out the FAQs</h2>
+          <p>Still have unanswered questions and need to get in touch?</p>
+
+          <div class="faq-accordion">
+
+          </div>
+
+        </div>
       </section>
 
       <section id="subscribe">
