Changed chevron to use fontawesome-icon instead of image, to make it easier handle switching of colors

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
   
             <a class="discover-more" href="#">
-              <img class="chevron-dn-img" src="/assets/icons/chevron-dn-white.svg" alt="">
+              <label class="btn-chevron chevron-discovermore"></label>
               <span>Discover more</span>
             </a>
           </div>
