Finished FAQ-contact section for tablet

--- a/index.html
+++ b/index.html
@@ -313,6 +313,19 @@
 
           <div class="contact">
             <button class="btn-contact btn-primary">Contact us now</button>
+            <div class="contact-cards">
+              <div class="phone-card contact-card">
+                <i class="fa-solid fa-phone-volume cc-icon phone-color"></i>
+                <p class="card-text">Still have questions?</p>
+                <a class="phone-color" href="tel:123456789">Contact us<i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+              <div class="chat-card contact-card">
+                <i class="fa-solid fa-comment-dots cc-icon chat-color"></i>
+                <p class="card-text">Don't like phone calls?</p>
+                <a class="chat-color" href="#">Contact us<i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
           </div>
         </div>
       </section>
