Finished FAQ-contact section for all devices

--- a/index.html
+++ b/index.html
@@ -245,8 +245,10 @@
 
       <section id="faq-contact">
         <div class="faq-contact-container wrapper">
-          <h2 class="headline tac">Any questions? Check out the FAQs</h2>
-          <p class="getintouch-text tac">Still have unanswered questions and need to get in touch?</p>
+          <div class="header">
+            <h2 class="headline tac">Any questions? <br class="headline-splitter">Check out the FAQs</h2>
+            <p class="getintouch-text tac">Still have unanswered questions and need to get in touch?</p>
+          </div>
 
           <div class="faq-accordion">
             <details open>
