--- a/index.html
+++ b/index.html
@@ -332,6 +332,19 @@
       </section>
 
       <section id="subscribe">
+        <div class="subscribe-container">
+          <div class="cta">
+            <img src="assets/icons/subscribe-bellicon.svg" alt="Bell">
+            <h2>Subscribe to our newsletter</h2>
+          </div>
+          <div class="email-form">
+            <form action="#" method="post" id="subscribe-email-form" name="subscribe-email-form">
+              <label for="email"></label>
+              <input type="email" id="email" placeholder="Your email" required>
+              <button>Subscribe</button>
+            </form>
+          </div>
+        </div>
       </section>
     </main>
 
