--- a/index.html
+++ b/index.html
@@ -340,8 +340,10 @@
           <div class="email-form">
             <form action="#" method="post" id="subscribe-email-form" name="subscribe-email-form">
               <label for="email"></label>
-              <input type="email" id="email" placeholder="Your email" required>
-              <button>Subscribe</button>
+              <div class="input-container">
+                <input type="email" id="email" placeholder="Your email" required>
+                <button class="btn-primary btn-subscribe">Subscribe</button>
+              </div>
             </form>
           </div>
         </div>
