Move subscribe component inside of faq-contact section, instead of having it as its own section

--- a/index.html
+++ b/index.html
@@ -328,23 +328,20 @@
               </div>
             </div>
           </div>
-        </div>
-      </section>
-
-      <section id="subscribe">
-        <div class="subscribe-container">
-          <div class="cta">
-            <img src="assets/icons/subscribe-bellicon.svg" alt="Bell">
-            <h2>Subscribe to our newsletter</h2>
-          </div>
-          <div class="email-form">
-            <form action="#" method="post" id="subscribe-email-form" name="subscribe-email-form">
-              <label for="email"></label>
-              <div class="input-container">
-                <input type="email" id="email" placeholder="Your email" required>
-                <button class="btn-primary btn-subscribe">Subscribe</button>
-              </div>
-            </form>
+          <div class="subscribe">
+            <div class="cta">
+              <img src="assets/icons/subscribe-bellicon.svg" alt="Bell">
+              <h2>Subscribe to our newsletter</h2>
+            </div>
+            <div class="email-form">
+              <form action="#" method="post" id="subscribe-email-form" name="subscribe-email-form">
+                <label for="email"></label>
+                <div class="input-container">
+                  <input type="email" id="email" placeholder="Your email" required>
+                  <button class="btn-primary btn-subscribe">Subscribe</button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </section>
