Add desktop media query for subscribe component

--- a/index.html
+++ b/index.html
@@ -328,10 +328,12 @@
               </div>
             </div>
           </div>
+
           <div class="subscribe">
             <div class="cta">
               <img src="assets/icons/subscribe-bellicon.svg" alt="Bell">
               <h2>Subscribe to our newsletter</h2>
+              <h2 class="desktop-text">Subscribe to our newsletter to stay informed about latest updates</h2>
             </div>
             <div class="email-form">
               <form action="#" method="post" id="subscribe-email-form" name="subscribe-email-form">
