--- a/index.html
+++ b/index.html
@@ -350,6 +350,9 @@
     </main>
 
     <footer>
+      <div class="footer">
+        <span>© 2024 Silicon. All rights reserved.<br class="footer-splitter"> Credit MadrasThemes</span>
+      </div>
     </footer>
 
   </div> <!-- Themewrapper div -->
