--- a/index.html
+++ b/index.html
@@ -238,46 +238,48 @@
       <section id="payment">
         <!-- Only in desktop -->
          <div class="payment-container wrapper">
-          <div class="top-area">
-            <div class="transfer-text">
-              <h2>Make your money transfer simple and clear</h2>
+          <div class="transfer-text">
+              <h2>Make your money<br>transfer simple and clear</h2>
               <ul>
-                <li>Banking transactions are free for you</li>
-                <li>No monthly cash commission</li>
-                <li>Manage payments and transactions online</li>
+                <li><img src="assets/icons/checkmarkercircle.svg" alt="">Banking transactions are free for you</li>
+                <li><img src="assets/icons/checkmarkercircle.svg" alt="">No monthly cash commission</li>
+                <li><img src="assets/icons/checkmarkercircle.svg" alt="">Manage payments and transactions online</li>
               </ul>
-              <button class="learn-more btn-primary">Learn more<i class="fa-solid fa-arrow-right"></i></button>
+              <a href="#">
+                <button class="btn-learn-more btn-primary">Learn more<i class="fa-solid fa-arrow-right"></i></button>
+              </a>
             </div>
+
             <div class="img-container top">
               <img class="img-transfer back" src="assets/images/desktop/payment-transfer-back.png" alt="">
               <img class="img-transfer front" src="assets/images/desktop/payment-transfer-front.png" alt="">
-
             </div>
-          </div>
-          <div class="bottom-area">
+
             <div class="img-container bottom">
               <img class="img-payment back" src="assets/images/desktop/payment-receive-back.png" alt="">
               <img class="img-payment front" src="assets/images/desktop/payment-receive-card.png" alt="">
             </div>
+
             <div class="payment-text">
-              <h2>Receive payment from international bank details</h2>
+              <h2>Receive payment from<br>international bank details</h2>
               <div class="cards">
-                <div class="card-left">
+                <div class="card">
                   <div class="card-img-container">
                     <img src="/assets/icons/appfeatureicons/easypayments.svg" alt="">
-                    <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
                   </div>
+                  <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
                 </div>
-                <div class="card-right">
+                <div class="card">
                   <div class="card-img-container">
                     <img src="/assets/icons/appfeatureicons/regularcashback.svg" alt="">
-                    <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
                   </div>
+                  <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
                 </div>
               </div>
-              <button class="learn-more btn-primary">Learn more<i class="fa-solid fa-arrow-right"></i></button>
+              <a href="#">
+                <button class="btn-learn-more btn-primary">Learn more<i class="fa-solid fa-arrow-right"></i></button>
+              </a>
             </div>
-          </div>
          </div>
       </section>
 
