--- a/index.html
+++ b/index.html
@@ -285,6 +285,43 @@
 
       <section id="reviews">
       <!-- Only in desktop -->
+       <div class="reviews-container wrapper">
+        <h2>Clients are<br>Loving Our App</h2>
+
+          <div class="review left">
+            <img class="img-quote-icon" src="assets/icons/quote-icon.svg" alt="">
+            <blockquote>
+              <img src="assets/icons/rating-4of5.svg" alt="4 out of 5 stars">
+              <p>Sit pretium aliquam tempor, orci dolor sed maecenas rutrum sagittis. Laoreet posuere rhoncus, egestas lacus, egestas justo aliquam vel. Nisi vitae lectus hac hendrerit. Montes justo turpis sit amet.</p>
+            </blockquote>
+            <footer class="author">
+              <div class="author-img">
+                <img src="assets/images/desktop/review-author-female.png" alt="Picture of Fannie">
+              </div>
+              <div class="author-details">
+                <p class="author-name">Fannie Summers</p>
+                <p class="author-role">Designer</p>
+              </div>
+            </footer>
+          </div>
+
+          <div class="review right">
+            <img class="img-quote-icon" src="assets/icons/quote-icon.svg" alt="">
+            <blockquote>
+              <img src="assets/icons/rating-5of5.svg" alt="5 out of 5 stars">
+              <p>Nunc senectus leo vel venenatis accumsan vestibulum sollicitudin amet porttitor. Nisl bibendum nulla tincidunt eu enim ornare dictumst sit amet. Dictum pretium dolor tincidunt egestas eget nunc.</p>
+            </blockquote>
+            <footer class="author">
+              <div class="author-img">
+                <img src="assets/images/desktop/review-author-male.png" alt="Picture of Albert">
+              </div>
+              <div class="author-details">
+                <p class="author-name">Albert Flores</p>
+                <p class="author-role">Developer</p>
+              </div>
+            </footer>
+          </div>
+        </div>
       </section>
 
       <section id="faq-contact">
