--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
               <form action="#" method="post" id="subscribe-email-form" name="subscribe-email-form">
                 <label for="email"></label>
                 <div class="input-container">
+                  <img class="mail-icon" src="assets/icons/subscribe-mailicon.svg" alt="">
                   <input type="email" id="email" placeholder="Your email" required>
                   <button class="btn-primary btn-subscribe">Subscribe</button>
                 </div>
