In burger menu, move login-button inside nav for improved accessibility. Rebuild burger menu to open/close using grid-template-rows instead of max-height to avoid needing to set a height.

--- a/index.html
+++ b/index.html
@@ -61,14 +61,18 @@
       </div>
       
       <!-- Hidden in desktop -->
-      <div class="burger-menu">
-        <a id="burger-signin-button" class="burger-item btn-primary btn-signin" href="#">
-          <img class="usericon" src="/assets/icons/signupbuttonusericon.svg" alt="">
-          <span>Sign in / up</span>
-        </a>
-        <nav id="burger-links" class="burger-item navbar-links">
+      <div id="burger-menu" class="burger-menu">
+        <nav class="burger-nav">
           <ul>
-            <li><a class="navbar-link burger-link" href="#">Features</a></li>
+            <li>
+              <a class="btn-primary btn-signin" href="#">
+                <img class="usericon" src="/assets/icons/signupbuttonusericon.svg" alt="">
+                <span>Sign in / up</span>
+              </a>
+            </li>
+            <li>
+              <a class="navbar-link" href="#">Features</a>
+            </li>
           </ul>
         </nav>
       </div>
