Add icon for closing burger menu

--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
             <span>Sign in / up</span>
           </a>
           
-          <button class="btn-burger">
+          <div class="btn-burger">
             <label for="burger-toggle">
-              <i class="fa-solid fa-bars"></i>
+              <i class="fa-solid fa-bars burger-menu-open"></i>
+              <i class="fa-solid fa-xmark burger-menu-close"></i>
             </label>
-          </button>
+          </div>
           <input type="checkbox" id="burger-toggle">
         </div>
       </div>
