Add container for 'discover-more' for positioning'

--- a/index.html
+++ b/index.html
@@ -94,10 +94,12 @@
               <a class="btn-dl btn-googleplay" href="#"><img class="btn-google-img" src="/assets/appstorebadges/googleplay-light.svg" alt="Google Play button"></a>
             </div>
   
-            <a class="discover-more" href="#">
-              <label class="btn-chevron chevron-discovermore"></label>
-              <span>Discover more</span>
-            </a>
+            <div class="discover-more-container">
+              <a class="discover-more" href="#">
+                <label class="btn-chevron chevron-discovermore"></label>
+                <span>Discover more</span>
+              </a>
+            </div>
           </div>
 
           <div class="hero-images">
