Revert to using manual linebreak, looks better on all devices

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       <section id="faq-contact">
         <div class="faq-contact-container wrapper">
           <div class="header">
-            <h2 class="headline tac">Any questions? Check out the FAQs</h2>
+            <h2 class="headline tac">Any questions?<br>Check out the FAQs</h2>
             <p class="getintouch-text tac">Still have unanswered questions and need to get in touch?</p>
           </div>
 
