Add jump-to-main-content accessibility

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <div class="themewrapper">
     
     <header id="nav">
+      <a href="#main" class="jump-to-main">Jump to main content</a>
       <div class="main-navbar wrapper">
         <div class="navbar-left flex">
           <a class="logo" href="index.html">
@@ -79,7 +80,7 @@
       </div>
     </header>
 
-    <main>
+    <main id="main-content">
       <section id="hero">
         <div class="hero-container wrapper">
           <h1 class="headline">Manage All Your<br>Money in One App</h1>
