Updated and added missing image alt-texts

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="main-navbar wrapper">
         <div class="navbar-left flex">
           <a class="logo" href="/">
-            <img class="logo-img" src="/assets/logo-bglight.svg" alt="Silicon Logo">
+            <img class="logo-img" src="/assets/logo-bglight.svg" alt="Silicon Logotype">
           </a>
           
           <nav id="navbar-links" class="navbar-links">
@@ -101,8 +101,8 @@
             </p>
 
             <div class="dlbuttons">
-              <a class="btn-dl btn-appstore" href="#"><img class="btn-apple-img" src="/assets/appstorebadges/appstore-light.svg" alt="Apple Appstore button"></a>
-              <a class="btn-dl btn-googleplay" href="#"><img class="btn-google-img" src="/assets/appstorebadges/googleplay-light.svg" alt="Google Play button"></a>
+              <a class="btn-dl btn-appstore" href="#"><img class="btn-apple-img" src="/assets/appstorebadges/appstore-light.svg" alt="Apple Appstore download button"></a>
+              <a class="btn-dl btn-googleplay" href="#"><img class="btn-google-img" src="/assets/appstorebadges/googleplay-light.svg" alt="Google Play download button"></a>
             </div>
   
             <div class="discover-more-container">
@@ -115,8 +115,8 @@
 
           <div class="hero-images">
             <img class="hero-img-shadow" src="/assets/images/tablet/hero-shadow.png" alt="">
-            <img class="hero-img-back" src="/assets/images/tablet/hero-back.png" alt="Account balance graph.">
-            <img class="hero-img-front" src="/assets/images/tablet/hero-front.png" alt="Transaction history.">
+            <img class="hero-img-back" src="/assets/images/tablet/hero-back.png" alt="">
+            <img class="hero-img-front" src="/assets/images/tablet/hero-front.png" alt="An image of two overlapping phones with the Silicon app, one displaying transaction features, the other budgeting.">
           </div>
 
         </div>
@@ -155,7 +155,7 @@
 
           <div class="content-container">
             <div class="left-content">
-              <img class="phone-img" src="/assets/images/desktop/features-phone.png" alt="Card transactions.">
+              <img class="phone-img" src="/assets/images/desktop/features-phone.png" alt="An image showcasing the transaction features of the app.">
               <img class="card-img" src="/assets/images/desktop/features-card.png" alt="">
             </div>
   
@@ -228,27 +228,27 @@
         <div class="how-container wrapper">
           <h2>How Does It Work?</h2>
 
-          <div class="images-container">
+          <div class="images-container" aria-label="A set of images showcasing some features of the app.">
             <div class="img tablet left">
-              <img src="/assets/images/tablet/howdoesitwork-left.png" alt="Showcase of card transactions.">
+              <img src="/assets/images/tablet/howdoesitwork-left.png" alt="Card transactions.">
             </div>
             <div class="img desktop left">
-              <img src="/assets/images/desktop/howdoesitwork-left.png" alt="Showcase of budget and spendings graph.">
+              <img src="/assets/images/desktop/howdoesitwork-left.png" alt="Budget and spending.">
             </div>
             <div class="img mobile center">
-              <img src="/assets/images/mobile/howdoesitwork.png" alt="Showcase of money transfers.">
+              <img src="/assets/images/mobile/howdoesitwork.png" alt="Money transfers.">
             </div>
             <div class="img tablet center">
-              <img src="/assets/images/tablet/howdoesitwork-center.png" alt="Showcase of money transfers.">
+              <img src="/assets/images/tablet/howdoesitwork-center.png" alt="Money tranfers.">
             </div>
             <div class="img desktop center">
-              <img src="/assets/images/desktop/howdoesitwork-center.png" alt="Showcase of card transactions.">
+              <img src="/assets/images/desktop/howdoesitwork-center.png" alt="Card transactions.">
             </div>
             <div class="img tablet right">
-              <img src="/assets/images/tablet/howdoesitwork-right.png" alt="Showcase of money transfer interface.">
+              <img src="/assets/images/tablet/howdoesitwork-right.png" alt="Money transfer interface.">
             </div>
             <div class="img desktop right">
-              <img src="/assets/images/desktop/howdoesitwork-right.png" alt="Showcase of money transfers.">
+              <img src="/assets/images/desktop/howdoesitwork-right.png" alt="Money transfers.">
             </div>
           </div>
 
@@ -286,12 +286,12 @@
 
             <div class="img-container top">
               <img class="img-transfer back" src="assets/images/desktop/payment-transfer-back.png" alt="">
-              <img class="img-transfer front" src="assets/images/desktop/payment-transfer-front.png" alt="">
+              <img class="img-transfer front" src="assets/images/desktop/payment-transfer-front.png" alt="Graph showing account balance over time.">
             </div>
 
             <div class="img-container bottom">
               <img class="img-payment back" src="assets/images/desktop/payment-receive-back.png" alt="">
-              <img class="img-payment front" src="assets/images/desktop/payment-receive-card.png" alt="">
+              <img class="img-payment front" src="assets/images/desktop/payment-receive-card.png" alt="App contacts list.">
             </div>
 
             <div class="payment-text">
@@ -446,7 +446,7 @@
 
           <div class="subscribe">
             <div class="cta">
-              <img src="assets/icons/subscribe-bellicon.svg" alt="Bell">
+              <img src="assets/icons/subscribe-bellicon.svg" alt="Notification bell.">
               <h2>Subscribe to our newsletter</h2>
               <h2 class="desktop-text">Subscribe to our newsletter to stay informed about latest updates</h2>
             </div>
