Corrected footer textcolor, how-section bgcolor, faq mobile-bgcolor

--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
 
       <section id="faq-contact">
         <div class="faq-contact-container wrapper">
-          <div class="header">
+          <header class="header">
             <h2 class="headline tac">Any questions?<br>Check out the FAQs</h2>
             <p class="getintouch-text tac">Still have unanswered questions and need to get in touch?</p>
-          </div>
+          </header>
 
           <div class="faq-accordion">
             <details open>
