Wrap introductory text in headers for improved semantics

--- a/index.html
+++ b/index.html
@@ -160,8 +160,10 @@
             </div>
   
             <div class="right-content">
-              <h2 class="headline">App Features</h2>
-              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
+              <header>
+                <h2 class="headline">App Features</h2>
+                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
+              </header>
               
               <div class="feature-cards">
                 <div class="easy card">
