Fix faulty href on jump-to-main

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="themewrapper">
     
     <header id="nav">
-      <a href="#main" class="jump-to-main">Jump to main content</a>
+      <a href="#main-content" class="jump-to-main">Jump to main content</a>
       <div class="main-navbar wrapper">
         <div class="navbar-left flex">
           <a class="logo" href="/">
