Add jump to features section on discover more button

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
   
             <div class="discover-more-container">
-              <a class="discover-more" href="#">
+              <a class="discover-more" href="#features">
                 <label class="btn-chevron chevron-discovermore"></label>
                 <span>Discover more</span>
               </a>
