Corrected learn-more-buttons for accessibility/tab navigation

--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
                 <li><img src="assets/icons/checkmarkercircle.svg" alt="">No monthly cash commission</li>
                 <li><img src="assets/icons/checkmarkercircle.svg" alt="">Manage payments and transactions online</li>
               </ul>
-              <a href="#">
-                <button class="btn-learn-more btn-primary">Learn more<i class="fa-solid fa-arrow-right"></i></button>
+              <a class="btn-learn-more btn-primary" href="#">
+                <span>Learn more<i class="fa-solid fa-arrow-right"></i></span>
               </a>
             </div>
 
@@ -326,8 +326,8 @@
                   <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
                 </div>
               </div>
-              <a href="#">
-                <button class="btn-learn-more btn-primary">Learn more<i class="fa-solid fa-arrow-right"></i></button>
+              <a class="btn-learn-more btn-primary" href="#">
+                <span>Learn more<i class="fa-solid fa-arrow-right"></i></span>
               </a>
             </div>
          </div>
