--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="#main-content" class="jump-to-main">Jump to main content</a>
       <div class="main-navbar wrapper">
         <div class="navbar-left flex">
-          <a class="logo" href="/">
+          <a class="logo" href="/" aria-current="page">
             <img class="logo-img" src="/assets/logo-bglight.svg" alt="Silicon Logotype">
           </a>
           
@@ -66,7 +66,7 @@
               <i class="fa-solid fa-xmark burger-menu-close"></i>
             </label>
           </div>
-          <input type="checkbox" id="burger-toggle" class="visually-hidden">
+          <input type="checkbox" id="burger-toggle" class="visually-hidden" aria-label="Toggle open main menu">
         </div>
       </div>
       
