--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <!-- End favicon -->
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/css/main.css">
   <script src="https://kit.fontawesome.com/66b6d46acf.js" crossorigin="anonymous"></script>
   <title>Silicon | Payments Made Easy</title>
   <meta name="description" content="Join 10+ million customers using Silicon to manage their payments, transfers and budgeting. Available in all countries.">
