--- a/index.html
+++ b/index.html
@@ -128,9 +128,12 @@
           </div>
 
           <div class="hero-images">
-            <img class="hero-img-shadow" src="/assets/images/tablet/hero-shadow.png" alt="">
-            <img class="hero-img-back" src="/assets/images/tablet/hero-back.png" alt="">
-            <img class="hero-img-front" src="/assets/images/tablet/hero-front.png" alt="An image of two overlapping phones with the Silicon app, one displaying transaction features, the other budgeting.">
+            <img class="hero-img-shadow tablet" src="/assets/images/tablet/hero-shadow.png" alt="">
+            <img class="hero-img-back tablet" src="/assets/images/tablet/hero-back.png" alt="">
+            <img class="hero-img-front tablet" src="/assets/images/tablet/hero-front.png" alt="An image of two overlapping phones with the Silicon app, one displaying transaction features, the other budgeting.">
+            <img class="hero-img-shadow desktop" src="/assets/images/desktop/hero-shadow.png" alt="">
+            <img class="hero-img-back desktop" src="/assets/images/desktop/hero-back.png" alt="">
+            <img class="hero-img-front desktop" src="/assets/images/desktop/hero-front.png" alt="An image of two overlapping phones with the Silicon app, one displaying transaction features, the other budgeting.">
           </div>
 
         </div>
