Check code spacing, indentation etc

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <meta name="description" content="Join 10+ million customers using Silicon to manage their payments, transfers and budgeting. Available in all countries.">
 </head>
 <body>
-
   <div class="themewrapper">
 
     <header id="nav">
@@ -128,6 +127,7 @@
             </div>
           </div>
 
+          <!-- In CSS, only show images for respective platform -->
           <div class="hero-images">
             <img class="hero-img-shadow tablet" src="/assets/images/tablet/hero-shadow.png" alt="">
             <img class="hero-img-back tablet" src="/assets/images/tablet/hero-back.png" alt="">
@@ -136,7 +136,6 @@
             <img class="hero-img-back desktop" src="/assets/images/desktop/hero-back.png" alt="">
             <img class="hero-img-front desktop" src="/assets/images/desktop/hero-front.png" alt="An image of two overlapping phones with the Silicon app, one displaying transaction features, the other budgeting.">
           </div>
-
         </div>
       </section>
 
@@ -167,7 +166,6 @@
             <div class="brandlogo desktop-only">
               <img class="brandlogo-img" src="/assets/images/brand-logos/logoipsum-6.svg" alt="Brand6">
             </div>
-
           </div>
 
 
@@ -193,6 +191,7 @@
                     <p>Id mollis consectetur congue egestas egestas suspendisse blandit justo.</p>
                   </div>
                 </div>
+
                 <div class="data card">
                   <div class="card-img-container">
                     <img src="/assets/icons/appfeatureicons/datasecurity.svg" alt="">
@@ -202,6 +201,7 @@
                     <p>Augue pulvinar justo, fermentum fames aliquam accumsan vestibulum non.</p>
                   </div>
                 </div>
+
                 <div class="cost card">
                   <div class="card-img-container">
                     <img src="/assets/icons/appfeatureicons/coststatistics.svg" alt="">
@@ -211,6 +211,7 @@
                     <p>Mattis urna ultricies non amet, purus in auctor non. Odio vulputate ac nibh.</p>
                   </div>
                 </div>
+
                 <div class="support card">
                   <div class="card-img-container">
                     <img src="/assets/icons/appfeatureicons/support247.svg" alt="">
@@ -220,6 +221,7 @@
                     <p>A elementum, imperdiet enim, pretium etiam facilisi in aenean quam mauris.</p>
                   </div>
                 </div>
+
                 <div class="regular card">
                   <div class="card-img-container">
                     <img src="/assets/icons/appfeatureicons/regularcashback.svg" alt="">
@@ -229,6 +231,7 @@
                     <p>Sit facilisis dolor arcu, fermentum vestibulum arcu elementum imperdiet eleifend.</p>
                   </div>
                 </div>
+
                 <div class="top card">
                   <div class="card-img-container">
                     <img src="/assets/icons/appfeatureicons/topstandards.svg" alt="">
@@ -299,6 +302,7 @@
                 <li><img src="assets/icons/checkmarkercircle.svg" alt="">No monthly cash commission</li>
                 <li><img src="assets/icons/checkmarkercircle.svg" alt="">Manage payments and transactions online</li>
               </ul>
+
               <a class="btn-learn-more btn-primary" href="#">
                 <span>Learn more<i class="fa-solid fa-arrow-right"></i></span>
               </a>
@@ -323,6 +327,7 @@
                   </div>
                   <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
                 </div>
+
                 <div class="card">
                   <div class="card-img-container">
                     <img src="/assets/icons/appfeatureicons/regularcashback.svg" alt="">
@@ -330,6 +335,7 @@
                   <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
                 </div>
               </div>
+
               <a class="btn-learn-more btn-primary" href="#">
                 <span>Learn more<i class="fa-solid fa-arrow-right"></i></span>
               </a>
@@ -456,6 +462,7 @@
                 <p class="card-text">Still have questions?</p>
                 <a class="phone-color" href="tel:123456789">Contact us<i class="fa-solid fa-arrow-right"></i></a>
               </div>
+
               <div class="chat-card contact-card">
                 <i class="fa-solid fa-comment-dots cc-icon chat-color"></i>
                 <p class="card-text">Don't like phone calls?</p>
@@ -470,6 +477,7 @@
               <h2>Subscribe to our newsletter</h2>
               <h2 class="desktop-text">Subscribe to our newsletter to stay informed about latest updates</h2>
             </div>
+            
             <div class="email-form">
               <form action="#" method="post" id="subscribe-email-form" name="subscribe-email-form">
                 <label for="email"></label>
